--- a/guanggao.html
+++ b/guanggao.html
@@ -7,11 +7,11 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 	<title>加微信，老中医帮你恢复40分钟</title>
-	<link rel="stylesheet" type="text/css" href="http://venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/css/infor.css">
+	<link rel="stylesheet" type="text/css" href="//venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/css/infor.css">
 
-	<script src="http://venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/js/jquery.min.js"></script>
-	<script src="http://venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/js/jquery.cookie.js"></script>
-	<script src="http://mp.weixin.qq.bmcocp.cn/cms66/duan1211/js/wx.js"></script>
+	<script src="//venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/js/jquery.min.js"></script>
+	<script src="//venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/js/jquery.cookie.js"></script>
+	<script src="//weixin.qq.bmcocp.cn/cms66/duan1211/js/wx.js"></script>
 </head>
 <header>
 	<p></p><h1>“补肾疯子”教授放狂言：不管你多不行，让你增大增粗坚挺30分钟以上！</h1><p></p>
@@ -181,7 +181,7 @@
 <div class="top_tip">
 	<div class="to_pc">
 		<img src="http://venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/img/qr_before.png" style="max-height: 75px">
-		<img class="weixinimg" style="max-height: 75px" src="http://venliebian1.oss-cn-beijing.aliyuncs.com/duan1211/wx/gdp179179.jpg">
+		<img class="weixinimg" style="max-height: 75px" src="//weixin.qq.bmcocp.cn/duan1211/wx/gdp179179.jpg">
 
 	</div>
 	<div style="padding-top:4px;">
